workspace/second/src/objects/Release_Calendar__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Due__c</fullName>
        <label>Approval Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code_Cutoff__c</fullName>
        <label>Code Cutoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code_Quarantine_Start__c</fullName>
        <label>Code Quarantine Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coding_Begins__c</fullName>
        <label>Coding Begins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Date__c</fullName>
        <label>Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eExchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Begins__c</fullName>
        <label>QA Begins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_List_Published__c</fullName>
        <label>Release List Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requests_Due__c</fullName>
        <label>Requests Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requirements_Allocation_Date__c</fullName>
        <label>Requirements Allocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requirements_Due__c</fullName>
        <label>Requirements Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solution_Sign_Off_Due__c</fullName>
        <label>Solution Sign Off Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UAT_End__c</fullName>
        <label>UAT End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UAT_Start__c</fullName>
        <label>UAT Start</label>
        <type>Date</type>
    </fields>
    <label>Release Calendar</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>